--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     background: url(gallery/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     height: 100vh;
     display: flex;
     justify-content: center;
